MDEV-6193: Problems with multi-table updates that JOIN against read-only table

All underlying tables should share the same lock type.