sql/table.h
@@ -2151,6 +2151,7 @@ struct TABLE_LIST
     }
     return false;
   } 
+  void set_lock_type(THD* thd, enum thr_lock_type lock);
 
 private:
   bool prep_check_option(THD *thd, uint8 check_opt_type);
